--- a/src/components/iot/EventTimeline/EventTimeline.module.css
+++ b/src/components/iot/EventTimeline/EventTimeline.module.css
@@ -82,7 +82,7 @@
 .eventIcon {
   width: 16px;
   height: 16px;
-  color: white;
+  color: var(--palette-white);
 }
 
 .eventItemSuccess .eventMarkerIcon {
